# ev-2025

./: CMakeLists.txt  CanWorker.h  Crc32Calculator.h  DatabaseManager.h  LogManager.h  README.md  SignalInfo.h  SignalValue.h  SignalValueMap.h  SystemManager.h  TimeDateResponder.h  TimeManager.h  TreeItem.h  TreeModel.h  VehicleApplication.qmlproject.qtds  VehicleApplication.qmlproject.txt  WifiManager.h  fa.h  gpiod.h  qds.cmake  qtquickcontrols2.conf  utility.h
App/: CMakeLists.txt  CanWorker.cpp  Crc32Calculator.cpp  DatabaseManager.cpp  LogManager.cpp  SignalValue.cpp  SignalValueMap.cpp  SystemManager.cpp  TimeDateResponder.cpp  TimeManager.cpp  TreeItem.cpp  TreeModel.cpp  WifiManager.cpp  gpiod.h  main.cpp  utility.cpp
App/autogen/: environment.h
OtherTools/: Pcan_Viewer.py  battery_mimic.cpp  message_encoder.py
VehicleApplication/: CMakeLists.txt  Constants.qml  qmldir
VehicleApplication/designer/: plugin.metainfo
VehicleApplicationContent/: App.qml  Backgrounds_195_610.qml  Backgrounds_195_610Form.ui.qml  BatteryDisplay.qml  CANData.qml  CANStack.qml  CMakeLists.txt  CustomDot.qml  DashStack.qml  Dashboard.qml  Debug.qml  DebugStack.qml  ECUSetup.qml  ECUStack.qml  FrameBack.qml  Fuel_dial_195_43.qml  MainForm.ui.qml  Rpm_dial_195_83.qml  Rpm_dial_195_83Form.ui.qml  Speed_dial_195_151.qml  Speed_dial_195_151Form.ui.qml  Vehicle.qml  VehicleStack.qml
cmake/: qmlcomponents.cmake
